# baccy

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: args_cli.rs  args_json.rs  args_util.rs  main.rs  options.rs  progress_helpers.rs  run.rs  scanner.rs  task_copy.rs  task_copy_delete.rs  util.rs
src/config/: cli.rs  json.rs  mod.rs
src/util/: bytes_to_string.rs  mod.rs  normalize_drive.rs  run_command.rs
