version = "0.1.0"

[package]
name = "baccy"
version = "0.1.0"
edition = "2024"

[dependencies]
walkdir = "2"
crossbeam = "0.8"
indicatif = "0.17"
filetime = "0.2"
colored = "3.0.0"
glob = "0.3.2"
serde_json = "1.0.141"
sysinfo = "0.30"

  [dependencies.clap]
  version = "4.5.41"
  features = [ "derive", "wrap_help" ]

  [dependencies.serde]
  version = "1.0.219"
  features = [ "derive" ]
